name: fountain
description: A particle fountain simulation.
version: 0.1
cabal-version: >= 1.6 && < 2
build-type: Simple

library
  build-depends: base >= 3 && < 4, random >= 1 && < 2
  ghc-options: -O2 -funbox-strict-fields 
  hs-source-dirs: .
                                
  exposed-modules: Particle
                   Vector
        
executable Vis
  main-is: Vis.hs
  build-depends: chalkboard >= 0.2 && < 1, chalkboard-viewer >= 0.1 && < 1
  
  ghc-options: -O2
  hs-source-dirs: .
                                

